<resources>
    <string name="app_name" translatable="false">SlothSlider</string>
    <string name="navigation_drawer_open" translatable="false"> "Abriendo drawer"</string>
    <string name="menu_popular" translatable="false">"Popular"</string>
    <string name="menu_buscar" translatable="false">"Buscar"</string>
    <string name="menu_perfil" translatable="false">"Perfil"</string>
    <string name="menu_ver_mas_tarde" translatable="false">"Ver más tarde"</string>
    <string name="menu_listas" translatable="false">"Listas"</string>
    <string name="menu_diario" translatable="false">"Diario"</string>
    <string name="menu_reviews" translatable="false">"Reviews"</string>
    <string name="menu_ajustes" translatable="false">"Ajustes"</string>
    <string name="navigation_drawer_close" translatable="false">"Navigation drawer cerrado"</string>
    <string name="title_click">Title click</string>

</resources>